Create forget password email templates, create Success API

--- a/EmailSent_App/templates/email_templates/password_forget_email_tamplates.html
+++ b/EmailSent_App/templates/email_templates/password_forget_email_tamplates.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Reset Request</title>
+  <title>Forgot Password Request</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -87,23 +87,20 @@
   <div class="container">
     <!-- Header Section -->
     <div class="header">
-      <h1>Password Reset Request</h1>
+      <h1>Forgot Password Request</h1>
       <p>If you didn't request a password reset, please ignore this email.</p>
     </div>
 
     <!-- Body Section -->
     <div class="body">
       <p>Dear <strong>{{ user.first_name }} {{ user.last_name }}</strong>,</p>
-      <p>We received a request to reset your password for your NextHire account. You can reset your password by clicking
-        the button below:</p>
+      <p>We received a request to reset the password for your NextHire account. If you made this request, you can reset your password by clicking the link below:</p>
 
       <p style="text-align: center;">
         <a href="{{ password_reset_url }}" class="button">Update Your Password</a>
       </p>
 
-      <p>For your security, you can only reset your password once. After this, the link will expire and cannot be used
-        again. Please make sure to complete your password reset as soon as possible to ensure the security of your
-        account.</p>
+      <p>For your security, you can only reset your password once. After this, the link will expire and cannot be used again. Please make sure to complete your password reset as soon as possible to ensure the security of your account.</p>
 
     </div>
 
