application approve api create done

--- a/EmailSent_App/templates/email_templates/password_reset_email_tamplates.html
+++ b/EmailSent_App/templates/email_templates/password_reset_email_tamplates.html
@@ -98,13 +98,12 @@
         the button below:</p>
 
       <p style="text-align: center;">
-        <a href="{{ password_reset_url }}" class="button">Update Your Password</a>
+        <a href="{{ password_reset_url }}" class="button">Reset Your Password</a>
       </p>
 
       <p>For your security, you can only reset your password once. After this, the link will expire and cannot be used
         again. Please make sure to complete your password reset as soon as possible to ensure the security of your
         account.</p>
-
     </div>
 
     <!-- Footer Section -->
