--- a/EmailSent_App/templates/email_templates/password_forget_email_tamplates.html
+++ b/EmailSent_App/templates/email_templates/password_forget_email_tamplates.html
@@ -97,7 +97,7 @@
       <p>We received a request to reset the password for your NextHire account. If you made this request, you can reset your password by clicking the link below:</p>
 
       <p style="text-align: center;">
-        <a href="{{ password_reset_url }}" class="button">Update Your Password</a>
+        <a href="{{ password_reset_url }}" class="button">Reset Your Password</a>
       </p>
 
       <p>For your security, you can only reset your password once. After this, the link will expire and cannot be used again. Please make sure to complete your password reset as soon as possible to ensure the security of your account.</p>
